<resources>
    <string name="app_name">Share Hi</string>
    <string name="imageView_description">Share Hi</string>

    <!--login-->
    <string name="activity_login_id">이메일</string>
    <string name="activity_login_password">비밀번호</string>
    <string name="activity_login_button">로그인</string>
    <string name="activity_login_signup"><u>회원가입</u></string>
    <string name="activity_login_find_password"><u>비밀번호 찾기</u></string>

    <!--sign up-->
    <string name="activity_signup_name">이름</string>
    <string name="activity_signup_id">이메일</string>
    <string name="activity_signup_email_check_button">인증</string>
    <string name="activity_signup_password">비밀번호</string>
    <string name="activity_signup_password_check">비밀번호 확인</string>
    <string name="activity_signup_button">회원가입</string>
    <string name="activity_signup_name_error">20자 이하로 입력해주세요</string>
    <string name="activity_signup_email_error">이메일 형식에 맞게 입력해주세요</string>
    <string name="activity_signup_password_error">특수문자 포함 8자 이상 입력해주세요</string>
    <string name="activity_signup_password_check_error">비밀번호가 일치하지 않아요</string>
    <string name="activity_signup_name_notOK">이름을 조건에 맞게 입력해주세요</string>
    <string name="activity_signup_email_notOK">이메일을 조건에 맞게 입력해주세요</string>
    <string name="activity_signup_email_check_notOK">이메일을 인증해주세요</string>
    <string name="activity_signup_password_notOK">비밀번호 확인을 조건에 맞게 입력해주세요</string>
    <string name="activity_signup_password_check_notOK">비밀번호를 조건에 맞게 입력해주세요</string>
    <string name="activity_signup_signUp_agree">회원가입 시 전체 약관에 동의한 것으로 간주합니다</string>

    <!--check email-->
    <string name="fragment_check_email_textInputLayout_hint">인증번호</string>

    <!--main-->
    <string name="activity_main_send_button_text">공유하기</string>
    <string name="activity_main_user_button_text">계정설정</string>

    <!--prepare-->
    <string name="fragment_prepare_folder_TextView_text">공유할 폴더 선택하기</string>
    <string name="fragment_prepare_go_folder_Button_text">공유 폴더 선택</string>
    <string name="fragment_prepare_go_member_Button_text">공유 대상 선택</string>
    <string name="fragment_prepare_member_TextView_text">공유할 대상 선택하기</string>
    <string name="fragment_prepare_go_share_Button_text">공유 시작하기</string>

    <!--folder-->
    <string name="fragment_folder_nothing_text">뒤로 가기</string>
    <string name="fragment_create_folder_name_hint">생성할 폴더의 이름을 입력하세요</string>

    <!--share name-->
    <string name="fragment_share_name_textView">공유할 기기의 별명을 입력해주세요</string>
    <string name="fragment_share_name_hint">별명 입력</string>
    <string name="fragment_share_name_cancel_button">취소</string>
    <string name="fragment_share_name_ok_button">공유 시작</string>

    <!--share-->
    <string name="fragment_share_path_textView">공유중인 경로</string>
    <string name="fragment_share_stop_share_button_text">공유중지</string>

    <!--setting-->
    <string name="fragment_setting_edit_name_button_text">이름 변경하기</string>
    <string name="fragment_setting_edit_image_button_text">이미지 변경하기</string>
    <string name="fragment_setting_edit_password_button_text">비밀번호 변경하기</string>
    <string name="fragment_setting_sign_out_button_text">로그아웃</string>
    <string name="fragment_setting_user_delete_button_text">탈퇴하기</string>
    <string name="fragment_setting_ok_button_text">변경</string>
    <string name="fragment_setting_cancel_button_text">취소</string>
    <string name="fragment_setting_edit_password_cant_open_text">비밀번호 변경은 일반 로그인만 가능합니다</string>
    <string name="fragment_setting_edit_password_current_success_text">비밀번호를 변경했습니다</string>
    <string name="fragment_setting_edit_password_current_fail_text">현재 비밀번호가 일치하지 않습니다</string>

    <!--edit name-->
    <string name="fragment_edit_name_hint">변경할 이름을 입력하세요</string>


    <!--edit password-->
    <string name="fragment_edit_password_current_hint">현재 비밀번호</string>
    <string name="fragment_edit_password_new_hint">새 비밀번호</string>
    <string name="fragment_edit_password_new_check_hint">비밀번호 확인</string>

    <string name="cancel_button">취소</string>
    <string name="ok_button">확인</string>


    <!--Toast Message-->
    <string name="toast_intro_getPermission">접근 권한을 허용해주세요</string>
    <string name="toast_login_success_message">환영합니다!</string>
    <string name="toast_login_fail_message">이메일 또는 비밀번호를 확인해주세요</string>
    <string name="toast_social_login_fail_message">구글 로그인에 실패했습니다</string>

    <string name="toast_check_email_duplicate_message">이미 사용중인 이메일입니다</string>
    <string name="toast_check_email_auth_message">인증번호를 전송했습니다</string>
    <string name="toast_check_email_success_message">이메일 인증에 성공했습니다</string>
    <string name="toast_check_email_timeout_message">제한시간이 지났습니다</string>
    <string name="toast_check_email_differentAuthNum_message">인증번호가 틀립니다.</string>
    <string name="toast_signup_success_message">회원가입에 성공했습니다</string>

    <string name="toast_create_folder_success_message">새 폴더를 생성했습니다</string>
    <string name="toast_create_folder_fail_message">폴더를 생성하지 못했습니다</string>
    <string name="toast_send_share_folder_fail_message">이 폴더는 공유할 수 없습니다</string>
    <string name="toast_send_share_file_fail_message">파일은 공유할 수 없습니다</string>

    <string name="toast_setting_user_delete_fail_message">회원탈퇴에 실패했습니다</string>
    <string name="toast_setting_change_image_fail_message">프로필 이미지를 변경할 수 없습니다</string>

    <string name="toast_connect_fail_message">네트워크 연결상태를 확인해주세요</string>
    <string name="toast_404_fail_message">해당 요청을 수행할 수 없습니다</string>
    <string name="toast_server_fail_message">서버에 문제가 발생했습니다</string>
    <string name="toast_socket_stop_message">공유를 중단했습니다</string>
    <string name="toast_socket_close_fail_message">통신을 중단하지 못했습니다</string>

    <string name="toast_500">500 error</string>
    <string name="toast_400">400 error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>