<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".user.LoginActivity">

    <ImageView
        android:id="@+id/activity_login_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_login_logo_height"
        android:layout_marginHorizontal="@dimen/activity_login_logo_marginHorizontal"
        android:src="@drawable/ic_logo_white"
        app:layout_constraintBottom_toTopOf="@id/activity_login_inputs_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_login_inputs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_logo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_id_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_login_textInputLayout_marginHorizontal"
            android:hint="@string/activity_login_id"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_login_id_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_password_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_login_textInputLayout_marginHorizontal"
            android:hint="@string/activity_login_password"
            app:layout_constraintTop_toBottomOf="@id/activity_login_id_text_input_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_login_password_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_login_login_button_marginHorizontal"
            android:layout_marginTop="@dimen/activity_login_login_button_marginTop"
            android:paddingVertical="@dimen/activity_login_login_button_paddingVertical"
            android:text="@string/activity_login_button"
            android:textSize="@dimen/activity_login_login_button_textSize"
            app:layout_constraintTop_toBottomOf="@id/activity_login_password_text_input_layout"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/activity_login_google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_login_google_button_marginTop"
            app:layout_constraintTop_toBottomOf="@id/activity_login_button"
            android:layout_marginHorizontal="@dimen/activity_login_login_button_marginHorizontal"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_login_submenu_marginTop"
            app:layout_constraintTop_toBottomOf="@id/activity_login_google_button">

            <TextView
                android:id="@+id/activity_login_signup_text_view"
                android:layout_width="@dimen/activity_login_submenu_width"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/activity_login_signup"
                android:textStyle="bold"
                android:textSize="@dimen/activity_login_submenu_textSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/activity_login_find_password_text_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"/>

            <TextView
                android:id="@+id/activity_login_find_password_text_view"
                android:layout_width="@dimen/activity_login_submenu_width"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/activity_login_find_password"
                android:textStyle="bold"
                android:textSize="@dimen/activity_login_submenu_textSize"
                app:layout_constraintLeft_toRightOf="@id/activity_login_signup_text_view"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>