<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.data.viewmodel.SettingViewModel" />
    </data>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/fragment_setting_dialog_layout_width"
            android:layout_height="@dimen/fragment_edit_password_layout_height">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_edit_password_current_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_edit_password_text_input_layout_height"
                android:layout_marginHorizontal="@dimen/fragment_setting_dialog_marginHorizontal"
                android:hint="@string/fragment_edit_password_current_hint"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/fragment_edit_password_new_text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_edit_password_current_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fragment_edit_password_text_input_edit_text_height"
                    android:inputType="textPassword"
                    android:text="@={viewModel.currentPasswordLiveData}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_edit_password_new_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_edit_password_text_input_layout_height"
                android:layout_marginHorizontal="@dimen/fragment_setting_dialog_marginHorizontal"
                android:hint="@string/fragment_edit_password_new_hint"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/fragment_edit_password_new_check_text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_edit_password_current_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_edit_password_new_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fragment_edit_password_text_input_edit_text_height"
                    android:inputType="textPassword"
                    android:text="@={viewModel.newPasswordLiveData}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_edit_password_new_check_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_edit_password_text_input_layout_height"
                android:layout_marginHorizontal="@dimen/fragment_setting_dialog_marginHorizontal"
                android:hint="@string/fragment_edit_password_new_check_hint"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/fragment_edit_password_cancel_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_edit_password_new_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_edit_password_new_check_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fragment_edit_password_text_input_edit_text_height"
                    android:inputType="textPassword"
                    android:text="@={viewModel.newCheckPasswordLiveData}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/fragment_edit_password_cancel_button"
                android:layout_width="@dimen/fragment_share_name_button_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_user_check_button_margin"
                android:onClick="@{() -> viewModel.closeEditPasswordDialog()}"
                android:text="@string/fragment_setting_cancel_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fragment_edit_password_ok_button"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_edit_password_new_check_text_input_layout" />

            <Button
                android:id="@+id/fragment_edit_password_ok_button"
                android:layout_width="@dimen/fragment_share_name_button_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fragment_user_check_button_margin"
                android:onClick="@{() -> viewModel.editPassword()}"
                android:text="@string/fragment_setting_ok_button_text"
                app:layout_constraintBottom_toBottomOf="@id/fragment_edit_password_cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fragment_edit_password_cancel_button"
                app:layout_constraintTop_toTopOf="@id/fragment_edit_password_cancel_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>