<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/activity_main_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_logo_height"
        android:layout_marginHorizontal="@dimen/activity_main_logo_marginHorizontal"
        android:contentDescription="@string/imageView_description"
        android:src="@drawable/ic_logo_white"
        app:layout_constraintBottom_toTopOf="@id/activity_main_inputs_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main_inputs_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_layout_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_logo">

        <Button
            android:id="@+id/activity_main_go_send_button"
            android:layout_width="@dimen/activity_main_button_width"
            android:layout_height="@dimen/activity_main_button_height"
            android:drawableLeft="@drawable/drawable_left_image_send"
            android:text="@string/activity_main_send_button_text"
            android:textSize="@dimen/activity_main_button_textsize"
            app:layout_constraintBottom_toTopOf="@id/activity_main_go_user_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <!--        <Button-->
        <!--            android:id="@+id/activity_main_go_receive_button"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_marginVertical="40dp"-->
        <!--            android:layout_marginHorizontal="@dimen/activity_main_button_marginHorizontal"-->
        <!--            android:text="공유받기"-->
        <!--            android:textSize="@dimen/activity_main_button_textsize"-->
        <!--            android:textStyle="bold"-->
        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
        <!--            app:layout_constraintRight_toRightOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/activity_main_go_send_button"-->
        <!--            app:layout_constraintBottom_toTopOf="activity_main_go_user_button" />-->

        <Button
            android:id="@+id/activity_main_go_user_button"
            android:layout_width="@dimen/activity_main_button_width"
            android:layout_height="@dimen/activity_main_button_height"
            android:drawableLeft="@drawable/drawable_left_image_face"
            android:text="@string/activity_main_user_button_text"
            android:textSize="@dimen/activity_main_button_textsize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_go_send_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>